--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-      "start": "webpack serve --mode development",
-      "build": "webpack --mode production"
-    },
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production"
+  },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
