--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.8",
@@ -22,6 +23,7 @@
     "@babel/preset-typescript": "^7.24.7",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
     "babel-loader": "^9.1.3",
     "html-webpack-plugin": "^5.6.0",
     "typescript": "^5.5.4",
